upmpdcli (1.2.16-1~ppaPPAVERS~SERIES1) SERIES; urgency=low

  * Testing

 -- Jean-Francois Dockes <jf@dockes.org>  Wed, 29 Nov 2017 08:20:00 +0200

upmpdcli (1.2.15-2~ppaPPAVERS~SERIES1) SERIES; urgency=low

  * Depend on libupnpp4

 -- Jean-Francois Dockes <jf@dockes.org>  Wed, 21 Jun 2017 08:20:00 +0200

upmpdcli (1.2.15-1~ppaPPAVERS~SERIES1) SERIES; urgency=low

  * Faster Qobuz searches (less requests to the service)
  * Songcast: stop the inactive sender so that it does not show up in
    lists.
  * Radio dynamic metadata scripts for radio which provide metadata from
    the web site, instead of icy metadata.
  * Properly handle radios which redirect straight from http to mms.
  * AVTransport: accept metadata-less streams.

 -- Jean-Francois Dockes <jf@dockes.org>  Wed, 21 Jun 2017 08:20:00 +0200

upmpdcli (1.2.14-1) unstable; urgency=low

  * Make the Receiver source visible, allowing grouping from Kazoo
  
 -- Jean-Francois Dockes <jf@dockes.org>  Fri, 19 May 2017 10:29:00 +0100

upmpdcli (1.2.12-1) unstable; urgency=low

  * Fixed bugs in the content directory interface: prevented Linn Kazoo to
    see more than a few entries in each folder.
  
 -- Jean-Francois Dockes <jf@dockes.org>  Mon, 03 Jan 2017 08:18:00 +0100

upmpdcli (1.2.11-1) unstable; urgency=low

  * Improve Qobuz interface
  * Allow dynamic retrieval of artwork for radios currently playing track
  
 -- Jean-Francois Dockes <jf@dockes.org>  Mon, 26 Dec 2016 14:05:00 +0100

upmpdcli (1.2.10-3) unstable; urgency=low

  * Fix bad option in rules file
  
 -- Jean-Francois Dockes <jf@dockes.org>  Sat, 03 Dec 2016 17:43:00 +0100

upmpdcli (1.2.10-1) unstable; urgency=low

  * Improve streaming services searches
  * Fix bug in upnp/av mode (seek after gapless transition)
  
 -- Jean-Francois Dockes <jf@dockes.org>  Sun, 20 Nov 2016 10:11:00 +0100

upmpdcli (1.2.9-1) unstable; urgency=low

  * Fix bug in format of protocolinfo data
  